[gd_scene load_steps=9 format=3 uid="uid://b8cqbac0ypsk2"]

[ext_resource type="Script" uid="uid://waqoc3v65sqr" path="res://Scripts/OptionsMenu.gd" id="1_ayvsw"]
[ext_resource type="Texture2D" uid="uid://0triggqvo46w" path="res://Sprites/Backgrounds/CityBackground1.png" id="2_s3xhb"]
[ext_resource type="AudioStream" uid="uid://8uoku3dscvqx" path="res://Music_Sounds/Sounds/MenuMove.wav" id="2_un4xt"]
[ext_resource type="Texture2D" uid="uid://h0cdghun0dhu" path="res://Sprites/Backgrounds/CityBackground2.png" id="3_un4xt"]
[ext_resource type="AudioStream" uid="uid://bu8qmkohefdng" path="res://Music_Sounds/Sounds/MenuClick.wav" id="3_uw46w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uw46w"]
bg_color = Color(0, 0.345098, 0.443137, 0.972549)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3oclb"]
bg_color = Color(0, 0.345098, 0.443137, 0.972549)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_itlgr"]
bg_color = Color(0, 0.345098, 0.443137, 0.439216)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ayvsw")

[node name="AudioMoves" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_un4xt")
volume_db = -15.0

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_uw46w")
volume_db = -15.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxBlue" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Blue" type="Sprite2D" parent="ParallaxBackground/ParallaxBlue"]
position = Vector2(160, 90)
scale = Vector2(0.864865, 0.818182)
texture = ExtResource("2_s3xhb")

[node name="ParallaxClouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(320, 0)

[node name="Clouds" type="Sprite2D" parent="ParallaxBackground/ParallaxClouds"]
position = Vector2(160, 90)
scale = Vector2(0.864865, 0.818182)
texture = ExtResource("3_un4xt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -34.0
offset_right = 71.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="VolumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxFlat_uw46w")
theme_override_styles/hover = SubResource("StyleBoxFlat_3oclb")
theme_override_styles/normal = SubResource("StyleBoxFlat_itlgr")
text = "Volumen"

[node name="ResolutionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxFlat_uw46w")
theme_override_styles/hover = SubResource("StyleBoxFlat_3oclb")
theme_override_styles/normal = SubResource("StyleBoxFlat_itlgr")
text = "Resolución
"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxFlat_uw46w")
theme_override_styles/hover = SubResource("StyleBoxFlat_3oclb")
theme_override_styles/normal = SubResource("StyleBoxFlat_itlgr")
text = "Volver atrás
"

[connection signal="focus_entered" from="VBoxContainer/VolumeButton" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/VolumeButton" to="." method="_on_volume_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ResolutionButton" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/ResolutionButton" to="." method="_on_resolution_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/BackButton" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
